ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oshyun-ingress
  namespace: stage
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: oshyun-alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/subnets: subnet-083d4b765e1d8bd23, subnet-014698df484d08e88
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
